<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetailsActivity">

    <ListView
        android:id="@+id/orderChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="-119dp" />

    <Button
        android:id="@+id/toMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Map"
        android:onClick="toMap"/>

    <TextView
        android:id="@+id/store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:text="History data" />

    <Button
        android:id="@+id/period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="40dp"
        android:text="Month"
        android:onClick= "changePeriod"
        android:visibility="invisible"
        />

<!--    <Button-->
<!--        android:id="@+id/period_year"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="200dp"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:text="Year" />-->

<!--    <Button-->
<!--        android:id="@+id/period_day"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="0dp"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:text="Day" />-->



</RelativeLayout>