<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity"
        tools:layout_editor_absoluteX="-38dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickTravelModeBtn"
        android:text="Driving"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickTravelModeBtn"
        android:text="Walking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickTravelModeBtn"
        android:text="Cycling"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="15dp"
        android:text="Open Menu"
        android:onClick="onClickOpenMenuBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seller_orders_button"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginStart="232dp"
        android:layout_marginBottom="64dp"
        android:onClick="onClickToSellerOrders"
        android:text="Seller Orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginStart="232dp"
        android:layout_marginBottom="12dp"
        android:onClick="onClickOpenProfileBtn"
        android:text="PROFILE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/order_history_button"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginStart="232dp"
        android:layout_marginBottom="64dp"
        android:onClick="onClickToOrderHistory"
        android:text="Order History"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/store_editor_button"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginStart="232dp"
        android:layout_marginBottom="112dp"
        android:onClick="onClickToStoreEditor"
        android:text="Store Editor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
